# Realtime-DX12-Renderer

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  main.cpp  setup.cmd  vcpkg.json
Application/: Application.cpp  Application.h
Application/Camera/: Camera.cpp  Camera.h
Application/CommandQueue/: CommandQueue.cpp  CommandQueue.h
Application/Engine/: Engine.cpp  Engine.h
Application/Engine/InputLayour/: InputLayout.cpp  InputLayout.h
Application/Engine/RenderObject/: RenderObject.cpp  RenderObject.h
Application/Engine/RenderTarget/: RenderTarget.cpp  RenderTarget.h
Application/Engine/Scene/: Scene.cpp  SceneManager.cpp  SceneManager.h
Application/Engine/Shader/: Shader.cpp  Shader.h
Application/Engine/UploadBuffer/: UploadBuffer.cpp  UploadBuffer.h
Application/Filters/: BlurFilter.cpp  BlurFilter.h  FilterBase.h
Application/Filters/BilateralBlur/: BilateralBlurFilter.cpp  BilateralBlurFilter.h
Application/Filters/Blur/: BlurFilter.cpp  BlurFilter.h
Application/Filters/SobelFilter/: SobelFilter.cpp  SobelFilter.h
Application/GraphicsPipeline/: GraphicsPipeline.cpp  GraphicsPipeline.h
Application/GraphicsPipelineManager/: GraphicsPipelineManager.cpp  GraphicsPipelineManager.h
Application/InputHandler/: InputHandler.cpp  InputHandler.h
Application/RenderGraph/Graph/: RenderGraph.cpp  RenderGraph.h
Application/RenderGraph/Nodes/: RenderNode.cpp  RenderNode.h
Application/ShaderCompiler/: Compiler.cpp  Compiler.h
Application/Test/: Test.cpp  Test.h
Application/Test/CubeMap/: CubeMapTest.cpp  CubeMapTest.h
Application/Test/LandTest/: LandTest.cpp  LandTest.h
Application/Test/LitWaves/: LitWaves.cpp  LitWaves.h
Application/Test/ShapesTest/: ShapesTest.cpp  ShapesTest.h
Application/Test/SimpleCubeTest/: SimpleCubeTest.cpp  SimpleCubeTest.h
Application/Test/StencilingTest/: StencilingTest.cpp  StencilingTest.h
Application/Test/TextureTest/: TextureWaves.cpp  TextureWaves.h
Application/Test/WindowTest/: WindowTest.cpp  WindowTest.h
Application/Textures/: Texture.h
Application/Textures/DDSTextureLoader/: DDSTextureLoader.cpp
Application/UI/: Widget.h
Application/UI/Effects/: FogWidget.cpp  FogWidget.h
Application/UI/Engine/: Camera.cpp  PerfomanceWidget.cpp  PerfomanceWidget.h  (+2 more)
Application/UIManager/: UiManager.cpp  UiManager.h
Application/Window/: Window.cpp  Window.h
Components/: RenderItemComponentBase.cpp  RenderItemComponentBase.h
Components/LightComponent/: LightComponent.cpp  LightComponent.h
Components/MeshComponent/: MeshComponent.cpp
Config/: ConfigReader.h
Config/MaterialsReader/: MaterialsReader.cpp  MaterialsReader.h
Config/PSOReader/: PsoReader.cpp  PsoReader.h
Config/RenderGraphReader/: RenderGraphReader.cpp  RenderGraphReader.h
Config/SceneReader/: SceneReader.cpp  SceneReader.h
Config/ShaderReader/: ShaderReader.cpp  ShaderReader.h
Config/TexturesReader/: TexturesParser.cpp  TexturesParser.h
ConfigReader/: ConfigReader.cpp
ConfigReader/MaterialsReader/: MaterialsReader.cpp
ConfigReader/PSOReader/: PsoReader.h
ConfigReader/SceneReader/: SceneReader.cpp
Core/Application/: Application.cpp  Application.h
Core/ConfigReader/: ConfigReader.h
Core/Materials/: Material.h
Core/Textures/: Texture.cpp  Texture.h
Core/Types/: Async.h  Color.h  Defines.h  Events.h  Exception.h  ExitHelper.h  KeyCodes.h  Logger.h  Path.h  RenderNodeInfo.h  Settings.h  TextureConstants.h  Transform.h  Types.h  UISettings.h
Core/Utils/: DirectXUtils.cpp  DirectXUtils.h  EngineHelper.h  MathUtils.h  PathUtils.h  Statics.h
GeomertryGenerator/: GeometryGenerator.cpp  GeometryGenerator.h
Materials/: Material.h
Materials/MaterialManager/: MaterialManager.cpp  MaterialManager.h
Objects/: MeshParser.cpp  MeshParser.h
Objects/GeomertryGenerator/: GeometryGenerator.cpp  GeometryGenerator.h
Objects/MeshGenerator/: MeshGenerator.cpp  MeshGenerator.h  MeshPayload.h
Objects/TinyObjLoader/: TinyObjLoaderParser.cpp  TinyObjLoaderParser.h
Profiler/: Profiler.h
Reflector/: EnumGenerator.py
Resources/: ConvertPNGToDDS.bat
Resources/Config/: AnimationsConfig.json  Config.json  LogConfig.json  MaterialsConfig.json  PSOConfig.json  RenderGraphConfig.json  SceneConfig.json  ShaderConfig.json  TexturesConfig.json
Resources/Textures/: Fireball.dds
Shaders/: AABBVisualizerFromExtents.hlsl  BRDF.hlsl  BaseShader.hlsl  BezierTesselation.hlsl  BilateralBlur.hlsl  Blur.hlsl  Common.hlsl  Composite.hlsl  DebugBox.hlsl  DebugFrustum.hlsl  DebugGeometry.hlsl  DisneyBRDF.hlsl  DrawNormals.hlsl  FrustumVisualizer.hlsl  GeometryUtils.hlsl  Geosphere.hlsl  LightingUtils.hlsl  QuadraticBezierTesselation.hlsl  SSAO.hlsl  SSAOBlur.hlsl  Samplers.hlsl  ShadowDebug.hlsl  ShadowMap.hlsl  SimpleCubeShader.hlsl  Sky.hlsl  Sobel.hlsl  TangentNormalDebug.hlsl  Tesselation.hlsl  TreeSprite.hlsl  Types.hlsl  Water.hlsl  WaveDrawSimulation.hlsl  WaveSimulation.hlsl
Shaders/OneSimpleCube/: PixelShader.hlsl  VertexShader.hlsl
Shaders/Raytracing/: Hit.hlsl  Miss.hlsl  RayGen.hlsl  Raytracer.hlsl  RaytracingCommon.hlsl
Textures/: SDLTextureLoader.h  Texture.cpp  Texture.h
Textures/CubeMaps/: CubeMapBase.cpp  CubeMapBase.h
Textures/DDSTextureLoader/: DDSTextureLoader.cpp  DDSTextureLoader.h
Textures/TextureManager/: TextureManager.cpp  TextureManager.h
Types/: DXHelper.h  Events.h  Exception.h  HighResolutionClock.cpp  HighResolutionClock.h  Logger.h  ObjectConstants.h  Path.h  RenderNodeInfo.h  Settings.cpp  Settings.h  TextureConstants.h  Types.h
Types/DXTypes/: DXHelper.h  FrameResource.h  ObjectConstants.h  RenderConstants.h  RenderItem.h
Types/DirectX/: DXHelper.h  FrameResource.cpp  FrameResource.h  HlslTypes.h  InstanceData.h  MaterialConstants.h  MaterialData.h  ObjectConstants.h  PSODescription.h  RenderConstants.h  RenderItem.h  Resource.cpp  Resource.h  ShaderArray.h  ShaderTypes.h  Vertex.h
Types/Timer/: Timer.h
Utils/: DXUtils.h  DirectX.cpp  DirectX.h  DirectXUtils.cpp  DirectXUtils.h  EngineHelper.h  Math.h  MathUtils.h  Path.h  PathUtils.h  Statics.h
(+293 files in other folders)
